Implement proxy performance issues